--- a/admin-panel-info.html
+++ b/admin-panel-info.html
@@ -173,42 +173,44 @@
                                             </span>
                                         </a>
                                     </div>
-                                    <div class="admin-panel-info-new-users__table new-users-table">
-                                        <div class="new-users-table__item new-users-table__header">
-                                            <p class="new-users-table__name">id</p>
-                                            <p class="new-users-table__name">Название</p>
-                                            <p class="new-users-table__name">Количество</p>
-                                            <p class="new-users-table__name">Преподаватель</p>
-                                        </div>
-                                        <div class="new-users-table__item">
-                                            <p class="new-users-table__name">01</p>
-                                            <p class="new-users-table__name">224 ВЕБ</p>
-                                            <p class="new-users-table__name">25</p>
-                                            <p class="new-users-table__name">Гиндуллин Аяз Ильгизович</p>
-                                        </div>
-                                        <div class="new-users-table__item">
-                                            <p class="new-users-table__name">01</p>
-                                            <p class="new-users-table__name">224 ВЕБ</p>
-                                            <p class="new-users-table__name">25</p>
-                                            <p class="new-users-table__name">Гиндуллин Аяз Ильгизович</p>
-                                        </div>
-                                        <div class="new-users-table__item">
-                                            <p class="new-users-table__name">01</p>
-                                            <p class="new-users-table__name">224 ВЕБ</p>
-                                            <p class="new-users-table__name">25</p>
-                                            <p class="new-users-table__name">Гиндуллин Аяз Ильгизович</p>
-                                        </div>
-                                        <div class="new-users-table__item">
-                                            <p class="new-users-table__name">01</p>
-                                            <p class="new-users-table__name">224 ВЕБ</p>
-                                            <p class="new-users-table__name">25</p>
-                                            <p class="new-users-table__name">Гиндуллин Аяз Ильгизович</p>
-                                        </div>
-                                        <div class="new-users-table__item">
-                                            <p class="new-users-table__name">01</p>
-                                            <p class="new-users-table__name">224 ВЕБ</p>
-                                            <p class="new-users-table__name">25</p>
-                                            <p class="new-users-table__name">Гиндуллин Аяз Ильгизович</p>
+                                    <div class="users-table">
+                                        <div class="admin-panel-info-new-users__table new-users-table new-users-table-group">
+                                            <div class="new-users-table__item new-users-table__header">
+                                                <p class="new-users-table__name">id</p>
+                                                <p class="new-users-table__name">Название</p>
+                                                <p class="new-users-table__name">Количество</p>
+                                                <p class="new-users-table__name">Преподаватель</p>
+                                            </div>
+                                            <div class="new-users-table__item">
+                                                <p class="new-users-table__name">01</p>
+                                                <p class="new-users-table__name">224 ВЕБ</p>
+                                                <p class="new-users-table__name">25</p>
+                                                <p class="new-users-table__name">Гиндуллин Аяз Ильгизович</p>
+                                            </div>
+                                            <div class="new-users-table__item">
+                                                <p class="new-users-table__name">01</p>
+                                                <p class="new-users-table__name">224 ВЕБ</p>
+                                                <p class="new-users-table__name">25</p>
+                                                <p class="new-users-table__name">Гиндуллин Аяз Ильгизович</p>
+                                            </div>
+                                            <div class="new-users-table__item">
+                                                <p class="new-users-table__name">01</p>
+                                                <p class="new-users-table__name">224 ВЕБ</p>
+                                                <p class="new-users-table__name">25</p>
+                                                <p class="new-users-table__name">Гиндуллин Аяз Ильгизович</p>
+                                            </div>
+                                            <div class="new-users-table__item">
+                                                <p class="new-users-table__name">01</p>
+                                                <p class="new-users-table__name">224 ВЕБ</p>
+                                                <p class="new-users-table__name">25</p>
+                                                <p class="new-users-table__name">Гиндуллин Аяз Ильгизович</p>
+                                            </div>
+                                            <div class="new-users-table__item">
+                                                <p class="new-users-table__name">01</p>
+                                                <p class="new-users-table__name">224 ВЕБ</p>
+                                                <p class="new-users-table__name">25</p>
+                                                <p class="new-users-table__name">Гиндуллин Аяз Ильгизович</p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -225,27 +227,29 @@
                                             </span>
                                         </a>
                                     </div>
-                                    <div class="admin-panel-info-new-users__table new-users-table">
-                                        <div class="new-users-table__item new-users-table__header">
-                                            <p class="new-users-table__name">id</p>
-                                            <p class="new-users-table__name">Фамилия</p>
-                                            <p class="new-users-table__name">Имя</p>
-                                            <p class="new-users-table__name">Отчество</p>
-                                            <p class="new-users-table__name">Email</p>
-                                        </div>
-                                        <div class="new-users-table__item">
-                                            <p class="new-users-table__name">01</p>
-                                            <p class="new-users-table__name">Иванов</p>
-                                            <p class="new-users-table__name">Иван</p>
-                                            <p class="new-users-table__name">Алексеевич</p>
-                                            <p class="new-users-table__name">ivanov_ivan@mail.ru</p>
-                                        </div>
-                                        <div class="new-users-table__item">
-                                            <p class="new-users-table__name">01</p>
-                                            <p class="new-users-table__name">Иванов</p>
-                                            <p class="new-users-table__name">Иван</p>
-                                            <p class="new-users-table__name">Алексеевич</p>
-                                            <p class="new-users-table__name">ivanov_ivan@mail.ru</p>
+                                    <div class="users-table">
+                                        <div class="admin-panel-info-new-users__table new-users-table new-users-table-users">
+                                            <div class="new-users-table__item new-users-table__header">
+                                                <p class="new-users-table__name">id</p>
+                                                <p class="new-users-table__name">Фамилия</p>
+                                                <p class="new-users-table__name">Имя</p>
+                                                <p class="new-users-table__name">Отчество</p>
+                                                <p class="new-users-table__name">Email</p>
+                                            </div>
+                                            <div class="new-users-table__item">
+                                                <p class="new-users-table__name">01</p>
+                                                <p class="new-users-table__name">Иванов</p>
+                                                <p class="new-users-table__name">Иван</p>
+                                                <p class="new-users-table__name">Алексеевич</p>
+                                                <p class="new-users-table__name">ivanov_ivan@mail.ru</p>
+                                            </div>
+                                            <div class="new-users-table__item">
+                                                <p class="new-users-table__name">01</p>
+                                                <p class="new-users-table__name">Иванов</p>
+                                                <p class="new-users-table__name">Иван</p>
+                                                <p class="new-users-table__name">Алексеевич</p>
+                                                <p class="new-users-table__name">ivanov_ivan@mail.ru</p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
